--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #FFFEF8;
 }
 ol, ul {
 	list-style: none;
@@ -48,7 +49,6 @@ table {
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
@@ -56,10 +56,11 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	width: 80%;
+	margin: 50px auto;
 }
 section {
-	margin: 50px 0
+	margin: 50px 0;
 }
 
 h1{
@@ -68,14 +69,15 @@ h1{
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
-	color: #B1663C
+	color: #B1663C;
 }
 
 h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
+	margin-top: 4px;
+	text-transform: uppercase;
 }
 
 h2{
@@ -90,17 +92,24 @@ nav ul {
 	list-style-type: none;
 
 }
-nav li {
-	padding: 0 10px;
+nav li a{
+	padding-right: 30px;
 	font-size: 1.2em;
+	text-decoration: none;
+	color: black;
 }
 
-li:hover {
+nav img {
+	width: 19px;
+}
+a:hover {
 	color: #B1663C;
 }
 #introduction {
 	display: flex;
 	align-items: center;
+	width: 75%;
+	margin: 139px auto;
 }
 #introduction figure {
 	flex: 1
@@ -112,18 +121,24 @@ li:hover {
 }
 
 #introduction article {
-	flex: 1
+	flex: 1;
 }
 #introduction h2 {
 	margin-bottom: 1em;
 }
 
 #introduction p {
-	margin-bottom: 0.5em;
+	margin-bottom: 0.9em;
+	width: 404px;
+}
+
+#portfolio {
+	width: 80%;
+	margin: 50px auto;
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 50px;
 }
 .gallery {
 	width: 100%;
@@ -138,7 +153,7 @@ li:hover {
 
 }
 #contact {
-	width: 50%;
+	width: 30%;
 margin: auto;
 }
 #contact > * {
@@ -182,7 +197,9 @@ input[type="submit"]{
 
 footer nav ul {
 	display: flex;
+	padding-right: 100px;
 	justify-content: flex-end;
-	margin: 2em
+	background-color: white;
+	height: 60px;
 }
 
