--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -236,3 +236,76 @@ footer nav ul {
 	height: 60px;
 }
 
+/* Login */ 
+#login {
+	width: 30%;
+	margin: auto;
+	margin-top: 150px;
+	margin-bottom: 350px;
+}
+
+#login>* {
+	text-align: center;
+
+}
+
+#login h2 {
+	margin-bottom: 20px;
+}
+
+#login form {
+	text-align: left;
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+}
+
+/* ErrorMessage */
+
+
+#login input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#login label {
+	margin: 2em 0 0.5em 0;
+}
+
+input#email {
+	outline: none;
+}
+
+input#password {
+	outline: none;
+}
+
+input[type="submit"] {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin: 2em auto;
+	width: 200px;
+	text-align: center;
+	border-radius: 60px;
+
+	cursor: pointer;
+}
+
+section {
+	color: #3D3D3D;
+}
+
+section form a {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #3D3D3D;
+	margin: 0 auto;
+	text-decoration-line: underline;
+}
