--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -510,9 +510,9 @@ section form a {
 	justify-content: center;
 }
 
-/* Modale */
+/* Modale 1 */
 
-#modal {
+#modal_1 {
 	display: none;
 	/* flex en js */
 	justify-content: center;
@@ -525,7 +525,7 @@ section form a {
 	background: rgba(0, 0, 0, 0.3);
 }
 
-#modal_wrapper {
+#modal_wrapper_1 {
 	background-color: white;
 	position: absolute;
 	top: 10%;
@@ -537,8 +537,6 @@ section form a {
 	flex-direction: column;
 	align-items: center;
 }
-
-/* Modale 1 */
 
 #modal1 {
 	margin: 0;
@@ -574,48 +572,44 @@ section form a {
 	margin-bottom: 41px;
 }
 
-.modal-figure:last-child {
-	margin-right: auto;
-}
-
 #modal_figures {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.modal-figure {
+.modal_figure {
 	position: relative;
-	margin: 0 9px 12px 0;
-}
-
-.modal-img {
-	width: 78px;
-	height: 104px;
-}
-
-.modal-figure i {
-	font-size: 12px;
-	background: #000000;
-	color: white;
-	border-radius: 2px;
-	padding: 4px;
-}
-
-.modal-figure i:hover {
+	margin: 0 8px 12px 0;
 	cursor: pointer;
 }
 
+.modal_works {
+	width: 80px;
+	height: 110px;
+}
+
 .delete-btn {
+	color: white;
+	background: #000000;
+	border-radius: 2px;
+	width: 8px;
+	padding: 3px 5px;
 	position: absolute;
 	left: 70%;
 	top: 5%;
 }
 
 .move-btn {
+	color: white;
+	background: #000000;
+	border-radius: 2px;
+	width: 8px;
+	padding: 3px 5px;
 	position: absolute;
 	left: 39%;
 	top: 5%;
 }
+
 
 figcaption a {
 	text-decoration: none;
@@ -660,6 +654,32 @@ hr {
 
 /* Modale 2 */
 
+#modal_2 {
+	display: none;
+	/* flex en js */
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+}
+
+#modal_wrapper_2 {
+	background-color: white;
+	position: absolute;
+	top: 10%;
+	left: 33%;
+	height: auto;
+	width: 630px;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 #modal2 {
 	margin: 0;
 	width: 70%;
@@ -667,6 +687,19 @@ hr {
 	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
+}
+
+#modal_close2 {
+	position: absolute;
+	border: none;
+	color: black;
+	margin-left: auto;
+	border-radius: 10px;
+	font-size: 20px;
+	background-color: #FFFFFF;
+	top: 32px;
+	right: 35px;
+	cursor: pointer;
 }
 
 #modal_arrow {
@@ -685,6 +718,16 @@ hr {
 	flex-direction: column;
 	background: #E8F1F7;
 	border-radius: 3px;
+}
+
+#imagePreview {
+	width: 129px;
+	height: 182px;
+	padding-left: 156px;
+    padding-right: 156px;
+    background: #E8F1F7;
+    border-radius: 3px;
+
 }
 
 .image_container svg {
@@ -748,6 +791,15 @@ hr {
 
 	color: #3D3D3D;
 	margin-bottom: 10px;
+}
+
+.category select {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+	color: #444444;
 }
 
 #category,
